fix distortion on resize. add styling. fixed canvas size. no mouse normalization.

--- a/public/style.css
+++ b/public/style.css
@@ -5,7 +5,11 @@
 body, html{
    width: 100%;
    height: 100%;
+   background-color: coral;
 }
-#canvas {
+#drawing {
    display: block;
+   overflow: scroll;
+   background-color: antiquewhite;
 }
+
